--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:26.+'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-v4:26.+'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:26.+'
 }
